code changes for SPI filesystem review

--- a/firmware/ec/OpenCellular.cfg
+++ b/firmware/ec/OpenCellular.cfg
@@ -574,10 +574,10 @@ m3Hwi1Params.instance.name = "m3Hwi1";
 Program.global.m3Hwi1 = m3Hwi.create(60, "&uDMAIntHandler", m3Hwi1Params);
 */
 
-var m3Hwi2Params = new m3Hwi.Params();
+/*var m3Hwi2Params = new m3Hwi.Params();
 m3Hwi2Params.instance.name = "m3Hwi2";
 m3Hwi2Params.enableInt = false;
-Program.global.m3Hwi2 = m3Hwi.create(61, "&uDMAErrorHandler", m3Hwi2Params);
+Program.global.m3Hwi2 = m3Hwi.create(61, "&uDMAErrorHandler", m3Hwi2Params);*/
 
 /* ================ Application Specific Instances ================ */
 /* ================ NDK configuration ================ */
