For band3 calibration
changes needed for band3 calibration
Warning: not tested!

--- a/octal/oc-lte-testbench/pyscripts/script/system/.test.ini
+++ b/octal/oc-lte-testbench/pyscripts/script/system/.test.ini
@@ -5,7 +5,7 @@ PREPROCESS_FOLDER = 'measures'
 POSTPROCESS_FOLDER = 'calib'
 POSTPROCESS_BW_SUB_FOLDER = 'bw'
 FILE_NAME = 'cal.tgz'
-REMOTE_CALIB_FOLDER = '/tmp/cal/'
+REMOTE_CALIB_FOLDER = '/tmp/cal/calib'
 REMOTE_CALIB_VALIDATION_FOLDER = '/tmp/cal_read/'
 
 #Calibration points
