addition of comment

--- a/firmware/ec/OpenCellular.cfg
+++ b/firmware/ec/OpenCellular.cfg
@@ -574,6 +574,7 @@ m3Hwi1Params.instance.name = "m3Hwi1";
 Program.global.m3Hwi1 = m3Hwi.create(60, "&uDMAIntHandler", m3Hwi1Params);
 */
 
+/*Below configuration has some conflict with SPI DMA, doesn't work with it */
 /*var m3Hwi2Params = new m3Hwi.Params();
 m3Hwi2Params.instance.name = "m3Hwi2";
 m3Hwi2Params.enableInt = false;
