Updates per code review

--- a/firmware/host/Makefile
+++ b/firmware/host/Makefile
@@ -13,7 +13,7 @@ output_dir = bin
 
 default:
 	@mkdir -p $(output_dir)
-	$(SHELL) -c 'cd ../ec/platform/oc-sdr/schema; . ./mk_schema.sh'
+	$(SHELL) -c 'cd ../utilities/schema; . ./mk_schema.sh'
 	make all
 	
 all:	ocmw_uart ocmw_usb ocmw_eth occli ocmw_eth_stub ocware_stub
