--- a/firmware/ec/Makefile
+++ b/firmware/ec/Makefile
@@ -79,7 +79,7 @@ LLIBS += -Wl,--end-group
 OBJCOPY = $(TOOLCHAIN)/bin/arm-none-eabi-objcopy
 
 default:
-	$(SHELL) -c 'cd ./platform/oc-sdr/schema; . ./mk_schema.sh'
+	$(SHELL) -c 'cd ../utilities/schema; . ./mk_schema.sh'
 	make all
 
 all: oc_connect1
