--- a/firmware/host/Makefile
+++ b/firmware/host/Makefile
@@ -13,11 +13,13 @@ output_dir = bin
 
 default:
 	@mkdir -p $(output_dir)
-	$(SHELL) -c 'cd ../utilities/schema; . ./mk_schema.sh'
 	make all
 	
-all:	ocmw_uart ocmw_usb ocmw_eth occli ocmw_eth_stub ocware_stub
-	
+all:	gen_schema ocmw_uart ocmw_usb ocmw_eth occli ocmw_eth_stub ocware_stub
+
+gen_schema:
+	cd ../utilities/schema; ./mk_schema.sh
+
 .PHONY:	occli
 
 ocmw_uart:   $(OBJECTS)
