Updating coverage script to be more robust. Moving jenkins scripts to utilities/jenkins dir to match schema PR #180.

--- a/firmware/ec/Jenkinsfile
+++ b/firmware/ec/Jenkinsfile
@@ -21,7 +21,7 @@ node {
       stage('Build and Unit Test') {
         dir ("firmware/ec"){ 
           sh 'make ci' 
-          sh 'python ../../.ci/coverage.py'
+          sh 'python3 ../../.ci/coverage.py'
         }
       }
     } catch (err) {
