--- a/firmware/ec/Makefile
+++ b/firmware/ec/Makefile
@@ -84,7 +84,10 @@ LINT_FLAGS = -i -style=file -fallback-style=none
 
 .PRECIOUS: %/compiler.opt %/linker.cmd
 
-all: get_cfg oc_connect1
+all: get_cfg oc_connect1 hash
+
+hash:
+	cd ../utilities/checksums; ./hashes.sh $(shell pwd)/$(OUT) -ec
 
 oc_connect1: $(OUT)/OpenCellular.bin
 
