--- a/firmware/ec/Makefile
+++ b/firmware/ec/Makefile
@@ -97,7 +97,7 @@ hash:
 oc_connect1: $(OUT)/OpenCellular.bin
 
 $(OUT)/%/compiler.opt $(OUT)/%/linker.cmd : %.cfg
-	$(CONFIGURO) -c $(TOOLCHAIN) -t $(TARGET) -p $(PLATFORM) -r release $<
+	$(CONFIGURO) -c $(TOOLCHAIN) -t $(TARGET) -p $(PLATFORM) -r debug $<
 	cp $(OUT)/$(CONFIG)/package/cfg/$*_$(ROV_XS_SUFFIX).rov.xs .
 
 $(MAIN_OBJS): %.o: %.c $(OUT)/$(CONFIG)/compiler.opt
