Alert infra +detection

--- a/firmware/psu/psu.cfg
+++ b/firmware/psu/psu.cfg
@@ -519,7 +519,9 @@ var mwConfig = xdc.useModule('ti.mw.Config');
  * Include TI-RTOS middleware libraries
  */
 
+/* ================ Event configuration ================ */
 
+var ti_sysbios_knl_Event = xdc.useModule('ti.sysbios.knl.Event');
 
 /* ================ TI-RTOS drivers' configuration ================ */
 var driversConfig = xdc.useModule('ti.drivers.Config');
