--- a/firmware/psu/.settings/org.eclipse.core.resources.prefs
+++ b/firmware/psu/.settings/org.eclipse.core.resources.prefs
@@ -38,6 +38,8 @@ encoding//Debug/src/subdir_rules.mk=UTF-8
 encoding//Debug/src/subdir_vars.mk=UTF-8
 encoding//Debug/src/subsystem/power/subdir_rules.mk=UTF-8
 encoding//Debug/src/subsystem/power/subdir_vars.mk=UTF-8
+encoding//Debug/src/subsystem/watchdog/subdir_rules.mk=UTF-8
+encoding//Debug/src/subsystem/watchdog/subdir_vars.mk=UTF-8
 encoding//Debug/src/sysbios/subdir_rules.mk=UTF-8
 encoding//Debug/src/sysbios/subdir_vars.mk=UTF-8
 encoding//Debug/src/utils/subdir_rules.mk=UTF-8
