--- a/firmware/psu/psu.cfg
+++ b/firmware/psu/psu.cfg
@@ -557,3 +557,4 @@ m3Hwi2Params.instance.name = "m3Hwi2";
 m3Hwi2Params.enableInt = false;
 Program.global.m3Hwi2 = m3Hwi.create(61, "&uDMAErrorHandler", m3Hwi2Params);
 /* ================ Application Specific Instances ================ */
+var ti_sysbios_hal_Timer = xdc.useModule('ti.sysbios.hal.Timer');
