--- a/octal/oc-lte-testbench/pyscripts/script/system/.test3.ini
+++ b/octal/oc-lte-testbench/pyscripts/script/system/.test3.ini
@@ -2,7 +2,7 @@
 
 #Calib files
 PREPROCESS_FOLDER = 'measures'
-POSTPROCESS_FOLDER = 'calib'
+POSTPROCESS_FOLDER = 'cal'
 POSTPROCESS_BW_SUB_FOLDER = 'bw'
 FILE_NAME = 'cal.tgz'
 REMOTE_CALIB_FOLDER = '/tmp/cal/calib'
