added interrupt for GPIO1

--- a/testing/SYS-DVT/sdk/tip.dts
+++ b/testing/SYS-DVT/sdk/tip.dts
@@ -481,7 +481,9 @@
         dvt {
 			reg = <0 0 0 0>;
 			compatible = "dvt";
-            bb-current-temp-sensor-alert-gpio = <&gpio 1 8>;
+            bb-current-temp-sensor-alert-gpio = <&gpio 1 0>;
+            interrupt-parent = <&gpio>;
+            interrupts = <1 8>;
 
         };
 	
