Watchdog implemented as idle task

--- a/firmware/psu/psu.cfg
+++ b/firmware/psu/psu.cfg
@@ -475,7 +475,7 @@ Task.enableIdleTask = true;
  *
  * Reducing the idle stack size yields greater memory savings.
  */
-Task.idleTaskStackSize = 512;
+Task.idleTaskStackSize = 2048;
 
 /*
  * Reduce the number of task priorities.
@@ -483,7 +483,8 @@ Task.idleTaskStackSize = 512;
  * Decreasing the number of task priorities yield memory savings.
  */
 Task.numPriorities = 16;
-
+var Idle = xdc.useModule('ti.sysbios.knl.Idle');
+Idle.addFunc('&watchdog_toggle_wdi');
 
 
 /* ================ Text configuration ================ */
