--- a/firmware/ec/OpenCellular.cfg
+++ b/firmware/ec/OpenCellular.cfg
@@ -12,9 +12,9 @@ var Timer = xdc.useModule('ti.sysbios.hal.Timer');
 var Mailbox = xdc.useModule('ti.sysbios.knl.Mailbox');
 var Global = xdc.useModule('ti.ndk.config.Global');
 var Tcp = xdc.useModule('ti.ndk.config.Tcp');
-var Ip = xdc.useModule('ti.ndk.config.Ip');
 var Icmp = xdc.useModule('ti.ndk.config.Icmp');
 var DhcpClient = xdc.useModule('ti.ndk.config.DhcpClient');
+var Event = xdc.useModule('ti.sysbios.knl.Event');
 /*
  * Default value is family dependent. For example, Linux systems often only
  * support a minimum period of 10000 us and multiples of 10000 us.
@@ -579,7 +579,17 @@ Program.global.m3Hwi1 = m3Hwi.create(60, "&uDMAIntHandler", m3Hwi1Params);
 m3Hwi2Params.instance.name = "m3Hwi2";
 m3Hwi2Params.enableInt = false;
 Program.global.m3Hwi2 = m3Hwi.create(61, "&uDMAErrorHandler", m3Hwi2Params);*/
+/* WatchDog */
+var m3Hwi0Params = new m3Hwi.Params();
+m3Hwi0Params.instance.name = "m3Hwi0";
+m3Hwi0Params.enableInt = false;
+Program.global.m3Hwi0 = m3Hwi.create(34, "&WatchdogIntHandler", m3Hwi0Params);
 
+/* UART3 */
+var m3Hwi0Params = new m3Hwi.Params();
+m3Hwi0Params.instance.name = "m3Hwi0";
+m3Hwi0Params.enableInt = false;
+Program.global.m3Hwi0 = m3Hwi.create(72, "&UART3IntHandler", m3Hwi0Params);
 /* ================ Application Specific Instances ================ */
 /* ================ NDK configuration ================ */
 var Ndk       = xdc.loadPackage('ti.ndk.config');
@@ -607,7 +617,5 @@ Global.lowTaskPriLevel = 7;
 Global.normTaskPriLevel = 8;
 Global.highTaskPriLevel = 9;
 Global.kernTaskPriLevel = 11;
-
-Ip.autoIp = false;
-Ip.address = "192.168.1.2";
-Ip.mask = "255.255.255.0";
+var Ip = xdc.module('ti.ndk.config.Ip');
+Ip.autoIp = true;
