--- a/firmware/ec/.settings/org.eclipse.core.resources.prefs
+++ b/firmware/ec/.settings/org.eclipse.core.resources.prefs
@@ -20,6 +20,8 @@ encoding//Debug/src/Devices/uart/subdir_rules.mk=UTF-8
 encoding//Debug/src/Devices/uart/subdir_vars.mk=UTF-8
 encoding//Debug/src/comm/subdir_rules.mk=UTF-8
 encoding//Debug/src/comm/subdir_vars.mk=UTF-8
+encoding//Debug/src/console/subdir_rules.mk=UTF-8
+encoding//Debug/src/console/subdir_vars.mk=UTF-8
 encoding//Debug/src/devices/i2c/subdir_rules.mk=UTF-8
 encoding//Debug/src/devices/i2c/subdir_vars.mk=UTF-8
 encoding//Debug/src/devices/ocmp_wrappers/subdir_rules.mk=UTF-8
