--- a/firmware/ec/OpenCellular.cfg
+++ b/firmware/ec/OpenCellular.cfg
@@ -15,6 +15,7 @@ var Tcp = xdc.useModule('ti.ndk.config.Tcp');
 var Icmp = xdc.useModule('ti.ndk.config.Icmp');
 var DhcpClient = xdc.useModule('ti.ndk.config.DhcpClient');
 var Event = xdc.useModule('ti.sysbios.knl.Event');
+var Telnet = xdc.useModule('ti.ndk.config.Telnet');
 /*
  * Default value is family dependent. For example, Linux systems often only
  * support a minimum period of 10000 us and multiples of 10000 us.
@@ -196,7 +197,7 @@ BIOS.assertsEnabled = true;
 /*
  * Specify default heap size for BIOS.
  */
-BIOS.heapSize = 102400;
+BIOS.heapSize = 32000;
 
 /*
  * A flag to determine if xdc.runtime sources are to be included in a custom
@@ -471,7 +472,7 @@ Task.idleTaskStackSize = 512;
  */
 Task.numPriorities = 16;
 
-
+Task.common$.namedInstance = true;
 
 /* ================ Text configuration ================ */
 var Text = xdc.useModule('xdc.runtime.Text');
@@ -568,6 +569,7 @@ m3Hwi0Params.instance.name = "m3Hwi0";
 m3Hwi0Params.enableInt = false;
 Program.global.m3Hwi0 = m3Hwi.create(73, "&UART4IntHandler", m3Hwi0Params);
 */
+
 /*
 var m3Hwi1Params = new m3Hwi.Params();
 m3Hwi1Params.instance.name = "m3Hwi1";
@@ -578,7 +580,8 @@ Program.global.m3Hwi1 = m3Hwi.create(60, "&uDMAIntHandler", m3Hwi1Params);
 /*var m3Hwi2Params = new m3Hwi.Params();
 m3Hwi2Params.instance.name = "m3Hwi2";
 m3Hwi2Params.enableInt = false;
-Program.global.m3Hwi2 = m3Hwi.create(61, "&uDMAErrorHandler", m3Hwi2Params);*/
+Program.global.m3Hwi2 = m3Hwi.create(61, "&uDMAErrorHandler", m3Hwi2Params);
+*/
 /* WatchDog */
 var m3Hwi0Params = new m3Hwi.Params();
 m3Hwi0Params.instance.name = "m3Hwi0";
@@ -586,10 +589,13 @@ m3Hwi0Params.enableInt = false;
 Program.global.m3Hwi0 = m3Hwi.create(34, "&WatchdogIntHandler", m3Hwi0Params);
 
 /* UART3 */
+
 var m3Hwi0Params = new m3Hwi.Params();
 m3Hwi0Params.instance.name = "m3Hwi0";
 m3Hwi0Params.enableInt = false;
 Program.global.m3Hwi0 = m3Hwi.create(72, "&UART3IntHandler", m3Hwi0Params);
+
+
 /* ================ Application Specific Instances ================ */
 /* ================ NDK configuration ================ */
 var Ndk       = xdc.loadPackage('ti.ndk.config');
@@ -618,4 +624,8 @@ Global.normTaskPriLevel = 8;
 Global.highTaskPriLevel = 9;
 Global.kernTaskPriLevel = 11;
 var Ip = xdc.module('ti.ndk.config.Ip');
-Ip.autoIp = true;
+Ip.autoIp = false;
+var telnet0Params = new Telnet.Params();
+telnet0Params.callBackFxn = "&ConsoleOpen";
+var telnet0 = Telnet.create(telnet0Params);
+Ip.address = "192.168.1.2";
